--- a/css/style.css
+++ b/css/style.css
@@ -107,3 +107,13 @@ button {
   border-radius: 4px;
   cursor: pointer;
 }
+
+#descripcionMantenimiento {
+    height: 150px;
+    width: 290px;
+}
+
+#diagnostico{
+    height: 150px;
+    width: 290px;
+}
